native/include/image_ffi.h

#ifndef IMAGE_FFI_H_
#define IMAGE_FFI_H_

#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef struct ImageBuffer {
  uint8_t* data;
  void* release_handle;
  int32_t width;
  int32_t height;
  int32_t channels;
  int32_t stride;
} ImageBuffer;

typedef struct ImageResult {
  int32_t code;
  ImageBuffer buffer;
} ImageResult;

ImageResult image_resize_rgba8(const uint8_t* data,
                               int32_t width,
                               int32_t height,
                               int32_t channels,
                               int32_t target_width,
                               int32_t target_height,
                               int32_t interpolation);

ImageResult image_crop_rgba8(const uint8_t* data,
                             int32_t width,
                             int32_t height,
                             int32_t channels,
                             int32_t x,
                             int32_t y,
                             int32_t crop_width,
                             int32_t crop_height);

ImageResult image_gaussian_blur_rgba8(const uint8_t* data,
                                      int32_t width,
                                      int32_t height,
                                      int32_t channels,
                                      int32_t radius);

ImageResult image_convolution_rgba8(const uint8_t* data,
                                    int32_t width,
                                    int32_t height,
                                    int32_t channels,
                                    const uint8_t* mask_data,
                                    int32_t mask_width,
                                    int32_t mask_height,
                                    int32_t mask_channels,
                                    int32_t mask_channel,
                                    const double* filter,
                                    double div,
                                    double offset,
                                    double amount);

ImageResult image_separable_convolution_rgba8(const uint8_t* data,
                                              int32_t width,
                                              int32_t height,
                                              int32_t channels,
                                              const uint8_t* mask_data,
                                              int32_t mask_width,
                                              int32_t mask_height,
                                              int32_t mask_channels,
                                              int32_t mask_channel,
                                              const double* coefficients,
                                              int32_t coefficient_count);

void image_free_buffer(void* release_handle);

const char* image_last_error_message(void);

#ifdef __cplusplus
}  // extern "C"
#endif

#endif  // IMAGE_FFI_H_