lib/src/native/bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:image/src/native/bindings.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  ImageResult Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
  )
>()
external ImageResult image_resize_rgba8(
  ffi.Pointer<ffi.Uint8> data,
  int width,
  int height,
  int channels,
  int target_width,
  int target_height,
  int interpolation,
);

@ffi.Native<
  ImageResult Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
  )
>()
external ImageResult image_crop_rgba8(
  ffi.Pointer<ffi.Uint8> data,
  int width,
  int height,
  int channels,
  int x,
  int y,
  int crop_width,
  int crop_height,
);

@ffi.Native<
  ImageResult Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
  )
>()
external ImageResult image_gaussian_blur_rgba8(
  ffi.Pointer<ffi.Uint8> data,
  int width,
  int height,
  int channels,
  int radius,
);

@ffi.Native<
  ImageResult Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Double>,
    ffi.Double,
    ffi.Double,
    ffi.Double,
  )
>()
external ImageResult image_convolution_rgba8(
  ffi.Pointer<ffi.Uint8> data,
  int width,
  int height,
  int channels,
  ffi.Pointer<ffi.Uint8> mask_data,
  int mask_width,
  int mask_height,
  int mask_channels,
  int mask_channel,
  ffi.Pointer<ffi.Double> filter,
  double div,
  double offset,
  double amount,
);

@ffi.Native<
  ImageResult Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Double>,
    ffi.Int32,
  )
>()
external ImageResult image_separable_convolution_rgba8(
  ffi.Pointer<ffi.Uint8> data,
  int width,
  int height,
  int channels,
  ffi.Pointer<ffi.Uint8> mask_data,
  int mask_width,
  int mask_height,
  int mask_channels,
  int mask_channel,
  ffi.Pointer<ffi.Double> coefficients,
  int coefficient_count,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void image_free_buffer(ffi.Pointer<ffi.Void> release_handle);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> image_last_error_message();

final class ImageBuffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  external ffi.Pointer<ffi.Void> release_handle;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int channels;

  @ffi.Int32()
  external int stride;
}

final class ImageResult extends ffi.Struct {
  @ffi.Int32()
  external int code;

  external ImageBuffer buffer;
}
